--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,15 +8,19 @@ jobs:
   github_release:
     name: Trigger GitHub release
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the new tag
-        uses: actions/checkout@v1.0.0
 
-      - name: Get tag info
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+
+      - name: Tag 🏷
         id: tags
         uses: babel/actions/get-release-tags@v2
 
-      - name: Generate the changelog
+      - name: Changelog 📝
         id: changelog
         uses: babel/actions/generate-lerna-changelog@v2
         with:
@@ -25,7 +29,7 @@ jobs:
         env:
           GITHUB_AUTH: ${{ secrets.GH_TOKEN }}
 
-      - name: Create a draft GitHub release
+      - name: Create draft GitHub release 🎁
         uses: babel/actions/publish-github-release@v2
         with:
           tag: ${{ steps.tags.outputs.new }}
