--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "test": "react-scripts test --watchAll=false",
+    "test:watch": "react-scripts test",
     "lint": "tsc -b ./tsconfig.json",
     "start": "run-p start:storybook watch:dist",
     "start:storybook": "start-storybook -p 9009 -s public",
