--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,9 +30,9 @@ jobs:
           scope: '@marcomontalbano'
 
       - name: Install 📦
-        run: npm ci
+        run: yarn
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
 
       - name: Test 🐛
-        run: npm test
+        run: yarn test
