--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-prefetch-google-fonts": "~1.4.3",
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-plugin-sitemap": "^2.4.5",
     "gatsby-plugin-styled-components": "^3.3.2",
     "gatsby-plugin-typescript": "^2.4.3",
     "gatsby-plugin-typescript-checker": "^1.1.1",
