--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "website:start": "lerna run start --stream --scope @marcomontalbano/website",
     "prewebsite:build": "run-s db:build componentLibrary:build lerna:fixDependencies",
     "website:build": "lerna run build --stream --scope @marcomontalbano/website",
-    "website:serve": "lerna run serve --stream --scope @marcomontalbano/website"
+    "website:serve": "lerna run serve --stream --scope @marcomontalbano/website",
+    "lerna:ncu": "lerna exec 'npx npm-check-updates -u' --stream"
   },
   "repository": {
     "type": "git",
@@ -40,13 +41,13 @@
   "devDependencies": {
     "chalk": "~4.1.0",
     "fs-extra": "~9.0.1",
-    "husky": "~4.2.5",
+    "husky": "~4.3.0",
     "lerna": "~3.22.1",
     "lerna-changelog": "~1.0.1",
-    "lint-staged": "~10.2.11",
+    "lint-staged": "~10.4.0",
     "npm-run-all": "~4.1.5",
-    "ora": "~4.0.5",
-    "prettier": "2.0.5"
+    "ora": "~5.1.0",
+    "prettier": "2.1.2"
   },
   "engines": {
     "node": ">= 12.x <= 14.x"
