--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prewebsite:build": "run-s db:build componentLibrary:build lerna:fixDependencies",
     "website:build": "lerna run build --stream --scope @marcomontalbano/website",
     "website:serve": "lerna run serve --stream --scope @marcomontalbano/website",
-    "lerna:ncu": "lerna exec 'npx npm-check-updates -u' --stream"
+    "lerna:ncu": "lerna exec 'npx npm-check-updates -u -x @marcomontalbano/component-library' --stream"
   },
   "repository": {
     "type": "git",
@@ -44,7 +44,7 @@
     "husky": "~4.3.0",
     "lerna": "~3.22.1",
     "lerna-changelog": "~1.0.1",
-    "lint-staged": "~10.4.0",
+    "lint-staged": "~10.5.1",
     "npm-run-all": "~4.1.5",
     "ora": "~5.1.0",
     "prettier": "2.1.2"
