--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -5,35 +5,35 @@
   "author": "Marco Montalbano <me@marcomontalbano.com>",
   "dependencies": {
     "@marcomontalbano/component-library": "^1.3.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "@types/node": "^14.11.2",
-    "@types/react": "^16.9.50",
-    "@types/react-dom": "^16.9.8",
+    "@types/node": "^14.14.7",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
     "@types/react-helmet": "^6.1.0",
-    "@types/styled-components": "^5.1.3",
+    "@types/styled-components": "^5.1.4",
     "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "^2.24.67",
-    "gatsby-image": "^2.4.20",
-    "gatsby-plugin-manifest": "^2.4.33",
-    "gatsby-plugin-offline": "^3.2.30",
+    "gatsby": "^2.26.1",
+    "gatsby-image": "^2.5.0",
+    "gatsby-plugin-manifest": "^2.6.0",
+    "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-prefetch-google-fonts": "~1.4.3",
-    "gatsby-plugin-react-helmet": "^3.3.12",
-    "gatsby-plugin-sharp": "^2.6.38",
-    "gatsby-plugin-sitemap": "^2.4.14",
-    "gatsby-plugin-styled-components": "^3.3.12",
-    "gatsby-plugin-typescript": "^2.4.21",
+    "gatsby-plugin-react-helmet": "^3.4.0",
+    "gatsby-plugin-sharp": "^2.8.0",
+    "gatsby-plugin-sitemap": "^2.6.0",
+    "gatsby-plugin-styled-components": "^3.4.0",
+    "gatsby-plugin-typescript": "^2.6.0",
     "gatsby-plugin-typescript-checker": "^1.1.1",
-    "gatsby-source-filesystem": "~2.3.32",
-    "gatsby-source-graphql": "~2.7.5",
-    "gatsby-transformer-json": "~2.4.13",
-    "gatsby-transformer-sharp": "^2.5.16",
+    "gatsby-source-filesystem": "~2.5.0",
+    "gatsby-source-graphql": "~2.8.0",
+    "gatsby-transformer-json": "~2.5.0",
+    "gatsby-transformer-sharp": "^2.6.0",
     "prettier": "^2.1.2",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.5"
   },
   "keywords": [
     "gatsby"
@@ -41,7 +41,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "start": "gatsby develop",
+    "start": "gatsby develop -p 8001",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "lint": "tsc -b tsconfig.json",
