--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "prettier": "2.1.2"
   },
   "engines": {
-    "node": ">= 12.x <= 14.x"
+    "node": "^12 || >=14"
   },
   "dependencies": {}
 }
