--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "componentLibrary:start": "lerna run start --stream --scope @marcomontalbano/component-library",
     "componentLibrary:watch": "npx chokidar-cli \"packages/component-library/dist/**\" -c \"yarn lerna:fixDependencies -- false\"",
     "componentLibrary:build": "lerna run build:dist --stream --scope @marcomontalbano/component-library",
+    "prelint": "run-s db:build componentLibrary:build lerna:fixDependencies",
     "prewebsite:start": "run-s db:build componentLibrary:build lerna:fixDependencies",
     "website:start": "lerna run start --stream --scope @marcomontalbano/website",
     "prewebsite:build": "run-s db:build componentLibrary:build lerna:fixDependencies",
@@ -39,18 +40,18 @@
     }
   },
   "devDependencies": {
-    "chalk": "~4.1.0",
-    "fs-extra": "~9.1.0",
+    "chalk": "~4.1.1",
+    "fs-extra": "~10.0.0",
     "husky": "~4.3.8",
-    "lerna": "~3.22.1",
+    "lerna": "~4.0.0",
     "lerna-changelog": "~1.0.1",
-    "lint-staged": "~10.5.4",
+    "lint-staged": "~11.0.0",
     "npm-run-all": "~4.1.5",
-    "ora": "~5.3.0",
-    "prettier": "2.2.1"
+    "ora": "~5.4.1",
+    "prettier": "2.3.1"
   },
   "engines": {
-    "node": "^12 || >=14"
+    "node": ">=14"
   },
   "dependencies": {}
 }
