--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -23,8 +23,8 @@
     "test:watch": "SKIP_PREFLIGHT_CHECK=true react-scripts test",
     "lint": "tsc -b ./tsconfig.json",
     "start": "run-p start:storybook watch:dist",
-    "start:storybook": "start-storybook -p 9009 -s public",
-    "build:storybook": "build-storybook --no-dll -s public",
+    "start:storybook": "start-storybook -p 9009",
+    "build:storybook": "build-storybook",
     "watch:dist": "tsc -b tsconfig.build.json -w",
     "build:dist": "tsc -b tsconfig.build.json",
     "prepublishOnly": "yarn build:dist"
