--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -14,6 +14,7 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.6.2",
+    "classnames": "^2.5.1",
     "remark-gemoji": "^8.0.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
