--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.6.2",
     "classnames": "^2.5.1",
+    "rehype-video": "^2.0.2",
     "remark-gemoji": "^8.0.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
