feat: optimize images

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -8,6 +8,7 @@
     "data": "npx tsx ./src/lib/gh-dump/run.ts",
     "build": "npm run data && astro check && astro build",
     "preview": "astro preview",
+    "check": "astro check",
     "astro": "astro"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "classnames": "^2.5.1",
     "rehype-video": "^2.0.2",
     "remark-gemoji": "^8.0.0",
+    "sharp": "^0.33.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
