--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,7 +1,7 @@
 {
   "name": "website",
   "type": "module",
-  "version": "0.0.1",
+  "private": "true",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
