--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.5.1",
     "rehype-video": "^2.0.2",
     "remark-gemoji": "^8.0.0",
+    "remark-github-alerts": "^0.1.0-beta.3",
     "sharp": "^0.33.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
