--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "pnpm -r dev",
+    "build:data": "pnpm -r build:data",
     "build": "pnpm -r build",
     "preview": "pnpm -r preview",
     "check": "pnpm -r check",
@@ -23,7 +24,7 @@
   },
   "homepage": "https://marcomontalbano.com",
   "engines": {
-    "node": ">=20",
+    "node": ">=20.3.0",
     "pnpm": ">=9"
   },
   "workspaces": [
