--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -5,22 +5,23 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "data": "npx tsx ./src/lib/gh-dump/run.ts",
-    "build": "npm run data && astro check && astro build",
+    "build:data": "npx tsx ./src/lib/gh-dump/run.ts",
+    "build": "npm run build:data && astro check && astro build",
     "preview": "astro preview",
     "check": "astro check",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.7.0",
+    "@astrojs/check": "^0.8.2",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.8.4",
+    "@types/node": "^20.14.12",
+    "astro": "^4.12.2",
     "classnames": "^2.5.1",
-    "rehype-video": "^2.0.2",
+    "rehype-video": "^2.2.0",
     "remark-gemoji": "^8.0.0",
     "remark-github-alerts": "^0.1.0-beta.3",
-    "sharp": "^0.33.3",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "sharp": "^0.33.4",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4"
   }
 }
