--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -14,12 +14,12 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.2",
-    "@types/node": "^22.7.7",
-    "astro": "^4.16.6",
+    "@types/node": "^22.8.7",
+    "astro": "^4.16.9",
     "classnames": "^2.5.1",
     "rehype-video": "^2.3.0",
     "remark-gemoji": "^8.0.0",
-    "remark-github-alerts": "^0.1.0-beta.3",
+    "remark-github-alerts": "^0.1.0",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
