--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.4",
     "@types/node": "^22.10.5",
     "astro": "^5.1.2",
