--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -24,5 +24,8 @@
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "schema-dts": "^1.1.2"
   }
 }
