--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -14,15 +14,15 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.4",
-    "@types/node": "^22.10.5",
-    "astro": "^5.1.5",
+    "@tailwindcss/vite": "^4.0.6",
+    "@types/node": "^22.13.2",
+    "astro": "^5.3.0",
     "classnames": "^2.5.1",
     "rehype-video": "^2.3.0",
     "remark-gemoji": "^8.0.0",
     "remark-github-alerts": "^0.1.0",
     "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.6",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
