--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -14,18 +14,18 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/sitemap": "^3.2.1",
-    "@tailwindcss/vite": "^4.0.6",
-    "@types/node": "^22.13.4",
-    "astro": "^5.3.0",
+    "@tailwindcss/vite": "^4.0.14",
+    "@types/node": "^22.13.10",
+    "astro": "5.5.2",
     "classnames": "^2.5.1",
     "rehype-video": "^2.3.0",
     "remark-gemoji": "^8.0.0",
     "remark-github-alerts": "^0.1.0",
     "sharp": "^0.33.5",
-    "tailwindcss": "^4.0.6",
-    "typescript": "^5.7.3"
+    "tailwindcss": "^4.0.14",
+    "typescript": "^5.8.2"
   },
   "devDependencies": {
-    "schema-dts": "^1.1.2"
+    "schema-dts": "^1.1.5"
   }
 }
